# genshin-gacha-exporter

./: Cargo.toml  recipe.json
.github/workflows/: release.yml
src/: client.rs  data_type.rs  export.rs  main.rs  style.rs
src/mitm/: cert.rs  mod.rs  service.rs
src/report/: mod.rs  summary.rs
