[package]
name = "genshin-gacha-exporter"
version = "0.1.0"
authors = ["Youmu <johnmave126@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
chrono = "0.4.19"
console = "0.14.0"
dialoguer = "0.7.1"
futures = "0.3.9"
indicatif = "0.15.0"
rayon = "1.5.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_with = "1.6.0"
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
win32console = "0.1.4"
